--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,3 +33,63 @@ jobs:
           Release ${{ github.sha }}
         draft: false
         prerelease: false
+
+# PUBLISH IMAGE TO DOCKER HUB AND GITHUB CONTAINER REPOSITORY
+    - id: docker-meta
+      name: Docker meta
+      uses: crazy-max/ghaction-docker-meta@v1
+      with:
+        images: ${{ github.repository }}
+
+    - id: buildx
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - id: cache-layers
+      name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    - id: login-docker-hub
+      name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+    - id: login-ghcr
+      name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GHCR_TOKEN }}
+
+    - id: docker-build-push-docker-hub
+      name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./Dockerfile
+        builder: ${{ steps.buildx.outputs.name }}
+        push: true
+        tags: |
+          ${{ github.repository }}:latest
+          ${{ github.repository }}:v16.11.5
+          ${{ github.repository }}:${{ github.sha }}
+          ghcr.io/${{ github.repository }}:latest
+          ghcr.io/${{ github.repository }}:v16.11.5
+          ghcr.io/${{ github.repository }}:${{ github.sha }}
+        labels: ${{ steps.docker-meta.outputs.labels }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+    - id: image-digest
+      name: Image digest
+      run: |
+        echo ${{ steps.docker-build.outputs.digest }}
+        docker image inspect ${{ github.repository }}:latest
