--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         draft: false
         prerelease: false
 
-# PUBLISH IMAGE TO DOCKER HUB AND GITHUB CONTAINER REPOSITORY
+# PUBLISH IMAGE TO DOCKER HUB
     - id: docker-meta
       name: Docker meta
       uses: crazy-max/ghaction-docker-meta@v1
@@ -61,14 +61,6 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - id: login-ghcr
-      name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GHCR_TOKEN }}
-
     - id: docker-build-push-docker-hub
       name: Build and push
       uses: docker/build-push-action@v2
@@ -81,9 +73,6 @@ jobs:
           ${{ github.repository }}:latest
           ${{ github.repository }}:v16.11.5
           ${{ github.repository }}:${{ github.sha }}
-          ghcr.io/${{ github.repository }}:latest
-          ghcr.io/${{ github.repository }}:v16.11.5
-          ghcr.io/${{ github.repository }}:${{ github.sha }}
         labels: ${{ steps.docker-meta.outputs.labels }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
