--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
 
 runs:
   using: docker
-  image: schemacrawler/schemacrawler-action:v16.11.5
+  image: docker://schemacrawler/schemacrawler-action:v16.11.5
 
 outputs:
   exit_status:
