--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,15 @@
 name: Create Release
 
 on:
+  workflow_dispatch:
   push:
-    branches-ignore:
-      - '*'
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
       - v[0-9]+.[0-9]+.[0-9]+-[A-Z]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -17,38 +20,32 @@ jobs:
 # SETUP BUILD ENVIRONMENT
     - id: checkout-code
       name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
 # CREATE GITHUB RELEASE AND ADD ASSETS
     - id: create-release
       name: Create GitHub release
-      uses: actions/create-release@latest
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        tag_name: ${{ github.ref }}
-        release_name: ${{ github.ref }}
-        body: |
-          SchemaCrawler Action for GitHub Actions          
-          SchemaCrawler ${{ github.ref }} release at last commit ${{ github.sha }}
-          See the change history at https://www.schemacrawler.com/changes-report.html
+        token: ${{ secrets.GITHUB_TOKEN }}
+        name: ${{ github.ref_name }}
         draft: false
         prerelease: false
+        body: |
+          SchemaCrawler ${{ github.event.release.tag_name }} release at last commit ${{ github.sha }}
+          See the change history at https://www.schemacrawler.com/changes-report.html
+        generate_release_notes: true
+
 
 # PUBLISH IMAGE TO DOCKER HUB
-    - id: docker-meta
-      name: Docker meta
-      uses: crazy-max/ghaction-docker-meta@v1
-      with:
-        images: schemacrawler/schemacrawler-action
-
     - id: buildx
       name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
 
     - id: cache-layers
       name: Cache Docker layers
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ github.sha }}
@@ -57,14 +54,14 @@ jobs:
 
     - id: login-docker-hub
       name: Login to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     - id: docker-build-push-docker-hub
       name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: ./
         file: ./Dockerfile
@@ -72,7 +69,7 @@ jobs:
         push: true
         tags: |
           schemacrawler/schemacrawler-action:latest
-          schemacrawler/schemacrawler-action:v16.21.1
+          schemacrawler/schemacrawler-action:v16.21.2
           schemacrawler/schemacrawler-action:${{ github.sha }}
         labels: |
           ${{ steps.docker-meta.outputs.labels }}
