--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  DOCKER_IMAGE_NAME: schemacrawler/schemacrawler
+  DOCKER_IMAGE_TAG: latest
+  DOCKERFILE_PATH: ./Dockerfile
+
 jobs:
   build:
     name: Create Release
@@ -45,47 +50,72 @@ jobs:
         draft: false
         prerelease: false
         body: |
-          SchemaCrawler ${{ github.event.release.tag_name }} release at last commit ${{ github.sha }}
+          SchemaCrawler Action ${{ github.event.release.tag_name }} release at last commit ${{ github.sha }}
           See the change history at https://www.schemacrawler.com/changes-report.html
         generate_release_notes: true
 
 
-# PUBLISH IMAGE TO DOCKER HUB
-    - id: buildx
-      name: Set up Docker Buildx
+# BUILD AND PUBLISH DOCKER IMAGE
+    - id: setup-qemu
+      name: Setup QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - id: setup-buildx
+      name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - id: cache-layers
-      name: Cache Docker layers
-      uses: actions/cache@v5
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
-
-    - id: login-docker-hub
-      name: Login to Docker Hub
+    - id: docker-login
+      name: Log into Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - id: docker-build-push-docker-hub
-      name: Build and push
+    - id: validate-build-configuration
+      name: Validate build configuration
       uses: docker/build-push-action@v6
       with:
-        context: ./
-        file: ./Dockerfile
-        builder: ${{ steps.buildx.outputs.name }}
-        push: true
-        tags: |
-          schemacrawler/schemacrawler-action:latest
-          schemacrawler/schemacrawler-action:v17.4.0
-          schemacrawler/schemacrawler-action:${{ github.sha }}
+        call: check
+        file: ${{ env.DOCKERFILE_PATH }}
+        context: .
+        load: false
+        push: false
+
+    - id: meta
+      name: Set up Docker metadata
+      uses: docker/metadata-action@v5
+      with:
+        images: |
+          ${{ env.DOCKER_IMAGE_NAME }}
+        tags: |	
+          type=semver,pattern={{version}},priority=930
+          type=semver,pattern={{major}}.{{minor}},priority=920
+          type=semver,pattern={{major}},priority=910
+          type=sha
         labels: |
-          ${{ steps.docker-meta.outputs.labels }}
-          org.opencontainers.image.url=https://www.schemacrawler.com
-          org.opencontainers.image.source=https://github.com/schemacrawler/SchemaCrawler-Action
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+          maintainer=Sualeh Fatehi <sualeh@hotmail.com>
+          org.opencontainers.image.authors=Sualeh Fatehi <sualeh@hotmail.com>
+          org.opencontainers.image.vendor=SchemaCrawler
+          org.opencontainers.image.licenses=(EPL-2.0)
+          org.opencontainers.image.url=https://www.schemacrawler.com/
+          org.opencontainers.image.documentation=https://github.com/schemacrawler/SchemaCrawler-AI-MCP-Server-Usage
+
+    - id: push-docker-image
+      name: Build and push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        call: build
+        file: ${{ env.DOCKERFILE_PATH }}
+        context: .
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: |-
+          linux/amd64
+          linux/arm64
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        annotations: ${{ steps.meta.outputs.annotations }}
+        sbom: true
+        provenance: true
+        load: false
+        push: true
